--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "Mir.Ethernity.Dat/**/*"
 jobs:
   publish:
     name: build, pack & publish
