--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -4,14 +4,27 @@ on:
     branches:
       - main
     paths:
-      - "Mir.Ethernity.Dat/**/*"
+      - "Mir.Ethernity.Dat.Cli/**/*"
 jobs:
   publish:
-    name: build, pack & publish
+    name: publish
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-    - run: dotnet build Mir.Ethernity.Dat.Cli
+    - run: dotnet publish Mir.Ethernity.Dat.Cli -c release -t win-x64
+    - name: Upload artifact - Windows
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: dat-encoder.exe
+        path: Mir.Ethernity.Dat.Cli/bin/release/netcoreapp3.1/win-x64/publish/dat-encoder.exe
+    - name: Make Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          Mir.Ethernity.Dat.Cli/bin/release/netcoreapp3.1/win-x64/publish/dat-encoder.exe
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
