--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -1,10 +1,11 @@
-name: publish to nuget
+name: publish cli artifacts
 on:
   push:
     branches:
       - main
     paths:
       - "Mir.Ethernity.Dat.Cli/**/*"
+      - .github/workflows/cli.yml
 jobs:
   publish:
     name: publish
@@ -14,7 +15,7 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
-    - run: dotnet publish Mir.Ethernity.Dat.Cli -c release -t win-x64
+    - run: dotnet publish Mir.Ethernity.Dat.Cli -c release -r win-x64
     - name: Upload artifact - Windows
       uses: actions/upload-artifact@v1.0.0
       with:
