--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -20,4 +20,4 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: dat-encoder
-        path: Mir.Ethernity.Dat.Cli/bin/release/netcoreapp3.1/win-x64/publish/**/*
+        path: Mir.Ethernity.Dat.Cli/bin/release/netcoreapp3.1/win-x64/publish/
