--- a/Mir.Ethernity.Dat/Mir.Ethernity.Dat.csproj
+++ b/Mir.Ethernity.Dat/Mir.Ethernity.Dat.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
      <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>bvadell</Authors>
     <Company>mir-ethernity</Company>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <PackageProjectUrl>https://github.com/mir-ethernity/dat-encoder</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mir-ethernity/dat-encoder</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
 </Project>
