--- a/Mir.Ethernity.Dat.Cli/Mir.Ethernity.Dat.Cli.csproj
+++ b/Mir.Ethernity.Dat.Cli/Mir.Ethernity.Dat.Cli.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <SelfContained>true</SelfContained>
     <AssemblyName>dat-encoder</AssemblyName>
     <StartupObject>Mir.Ethernity.Dat.Cli.Program</StartupObject>
   </PropertyGroup>
